--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,9 +19,9 @@
 @*        <link rel="stylesheet" href="@routes.Assets.versioned("lib/font-awesome/css/brands.css")">*@
     </head>
     <body>
-        <div class="container">
+@*        <div class="container">*@
             @content
-        </div>
+@*        </div>*@
 
 @*		<script src="@routes.Assets.versioned("javascripts/purchases.js")" type="module"></script>*@
         <script src="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript"></script>
