--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,7 +13,8 @@
     </head>
     <body>
         @content
-    <script src="@routes.Assets.versioned("lib/jquery/jquery.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("lib/mustache/mustache.min.js")" type="text/javascript"></script>
     </body>
 </html>
