--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,8 +10,7 @@
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="module"></script>
         <p class="lead">Purchase List</p>
         <div class="row">
-            <div id="purchaseList" class="col">
-            </div>
+            <div id="purchaseList" class="col"></div>
         </div>
         <div class="row mt-3">
             <div class="col">
