--- a/app/views/userForm.scala.html
+++ b/app/views/userForm.scala.html
@@ -5,7 +5,6 @@
 
     @main("Profile") {
         @menu {
-            @helper.javascriptRouter("jsRoutes")(routes.javascript.UserController.save)
             <div>
             @b4.formCSRF(routes.UserController.save(), Symbol("class") -> "mt-4") {
                 @b4.text(userConstraints("email"),
@@ -17,6 +16,8 @@
                 @b4.text(userConstraints("name"),
                     Symbol("_label") -> "Name",
                     Symbol("placeholder") -> "Your Name")
+                @b4.hidden(userConstraints("id"),
+                    Symbol("value") -> 0)
                 @b4.buttonType("submit", Symbol("class") -> "btn btn-primary") {
                     <i class="fas fa-save"></i> Save }
             }
