--- a/public/templates/purchase.mustache
+++ b/public/templates/purchase.mustache
@@ -13,4 +13,5 @@
                 <i class="fas fa-trash"></i></button>
         </div>
     </div>
+    <p class="text-sm-right font-weight-light">Created at {{createdAt}} by {{userName}}</p>
 {{/items}}
