--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,6 +7,27 @@
             routes.javascript.PurchaseController.load,
             routes.javascript.PurchaseController.update
         )
+        <script id="template" type="x-tmpl-mustache">
+            {{#items}}
+                <div id="purchase-{{id}}">
+                    <div class="input-group mb-2" id="ig-{{id}}">
+                        <div class="input-group-prepend" id="ipg-{{id}}">
+                            <div class="input-group-text">
+                                <button class="btn btn-sm {{buttonColor}}" type="button" id="cb-{{id}}">{{buttonText}}</button>
+                            </div>
+                        </div>
+
+                        <textarea id="ta-{{id}}" rows="2" class="form-control" data-status="{{status}}" disabled>{{name}}</textarea>
+
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button" id="db-{{id}}">
+                                <i class="fas fa-trash"></i></button>
+                        </div>
+                    </div>
+                    <p class="text-sm-right font-weight-light">Created at {{createdAt}} by {{userName}}</p>
+                </div>
+            {{/items}}
+        </script>
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="module"></script>
         <p class="lead">Purchase List</p>
         <div class="row">
