--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -8,8 +8,8 @@
             <div class="justify-content-center col-lg-6 offset-lg-3 mt-4">
                 <h4>Shoper</h4>
                 @b4.formCSRF(routes.LoginController.login(), Symbol("class") -> "mt-4") {
-                    @b4.text(loginConstraints("email"),
-                        Symbol("_label") -> "Email",
+                    @b4.text(loginConstraints("login"),
+                        Symbol("_label") -> "Login",
                         Symbol("_class") -> "position-relative")
                     @b4.password(loginConstraints("password"), Symbol("_label") -> "Password")
                     @b4.buttonType("submit", Symbol("class") -> "btn btn-primary") {
