--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -6,6 +6,7 @@
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <tr>
+                        <th scope="col">Login</th>
                         <th scope="col">Email</th>
                         <th scope="col">Name</th>
                     </tr>
@@ -13,10 +14,9 @@
                 <tbody>
                 @for(user <- users) {
                     <tr>
+                        <td>@user.login</td>
                         <td>@user.email</td>
-                        <td>@{
-                            user.name.getOrElse("")
-                        }</td>
+                        <td>@{user.name.getOrElse("")}</td>
                     </tr>
                 }
                 </tbody>
