fixes and improves

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(user: User)(implicit req: play.api.mvc.RequestHeader)
+@()(implicit req: play.api.mvc.RequestHeader)
 
 @main("Shoper") {
     @menu {
